--- a/web/crux/package.json
+++ b/web/crux/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crux",
-  "version": "0.14.1",
+  "version": "0.15.0-rc",
   "description": "Open-source delivery platform that helps developers to deliver applications efficiently by simplifying software releases and operations in any environment.",
   "author": "dyrector.io",
   "private": true,
