fix: retag_needs

--- a/.github/workflows/product_builder.yaml
+++ b/.github/workflows/product_builder.yaml
@@ -734,16 +734,15 @@ jobs:
     container:
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:2
     needs: [gather_changes, go_push]
-    # if: |
-    #   always() &&
-    #   (github.ref_name == 'develop' || github.ref_name == 'main' || github.ref_type == 'tag') &&
-    #   needs.e2e.result == 'success' &&
-    #   needs.go_build.result == 'success' &&
-    #   (needs.crux_build.result == 'success' || needs.crux_build.result == 'skipped') &&
-    #   (needs.crux-ui_build.result == 'success' || needs.crux-ui_build.result == 'skipped') &&
-    #   (needs.kratos_build.result == 'success' || needs.kratos_build.result == 'skipped') &&
-    #   needs.conventional_commits.result == 'success' &&
-    #   needs.gather_changes.result == 'success' && needs.go_push.result == 'success'
+    if: |
+      always() &&
+      (github.ref_name == 'develop' || github.ref_name == 'main' || github.ref_type == 'tag') &&
+      needs.go_build.result == 'success' &&
+      (needs.crux_build.result == 'success' || needs.crux_build.result == 'skipped') &&
+      (needs.crux-ui_build.result == 'success' || needs.crux-ui_build.result == 'skipped') &&
+      (needs.kratos_build.result == 'success' || needs.kratos_build.result == 'skipped') &&
+      needs.conventional_commits.result == 'success' &&
+      needs.gather_changes.result == 'success' && needs.go_push.result == 'success'
     environment: Workflow - Protected
     steps:
       - name: Login to GHCR
