build: add deploy job

--- a/.github/workflows/deploy_external.yaml
+++ b/.github/workflows/deploy_external.yaml
@@ -5,7 +5,7 @@ on:
     workflows:
       - 'product_builder'
     branches:
-      - 'feat/release-candidate'
+      - 'develop'
     types:
       - completed
 permissions:
