--- a/.github/workflows/product_builder.yaml
+++ b/.github/workflows/product_builder.yaml
@@ -69,9 +69,9 @@ jobs:
       crux: ${{ steps.filter.outputs.crux }}
       cruxui: ${{ steps.filter.outputs.cruxui }}
       kratos: ${{ steps.filter.outputs.kratos }}
-      tag: "0.15.0-rc" # ${{ steps.settag.outputs.tag }}
+      tag: ${{ steps.settag.outputs.tag }}
       extratag: ${{ steps.settag.outputs.extratag }}
-      version: "0.15.0-rc" # ${{ steps.settag.outputs.version }}
+      version: ${{ steps.settag.outputs.version }}
       minorversion: ${{ steps.settag.outputs.minorversion }}
       release: ${{ steps.release.outputs.release }}
     steps:
@@ -516,6 +516,149 @@ jobs:
         with:
           name: kratos
           path: ${{ env.KRATOS_WORKING_DIRECTORY }}/kratos.zstd
+  # e2e scope
+  e2e:
+    runs-on: ubuntu-22.04
+    # runs-on: self-hosted
+    container:
+      image: ghcr.io/dyrector-io/dyrectorio/playwright:latest
+      volumes: ["/var/run/docker.sock:/var/run/docker"]
+    needs:
+      - go_build
+      - crux_build
+      - crux-ui_build
+      - kratos_build
+      - gather_changes
+      - conventional_commits
+    if: |
+      always() &&
+      (needs.go_build.result == 'success' || needs.go_build.result == 'skipped') &&
+      (needs.crux_build.result == 'success' || needs.crux_build.result == 'skipped') &&
+      (needs.crux-ui_build.result == 'success' || needs.crux-ui_build.result == 'skipped') &&
+      (needs.kratos_build.result == 'success' || needs.kratos_build.result == 'skipped') &&
+      needs.conventional_commits.result == 'success' &&
+      needs.yaml_lint.result == 'success' &&
+      needs.gather_changes.result == 'success'
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v3
+      # - name: crane - artifact download
+      #   if: needs.gather_changes.outputs.agents == 'true'
+      #   uses: actions/download-artifact@v3
+      #   with:
+      #     name: crane
+      #     path: artifacts
+      - name: dagent - artifact download
+        if: ${{ (needs.gather_changes.outputs.agents == 'true') || (github.ref_type == 'tag')  || (needs.gather_changes.outputs.release == 'true') }}
+        uses: actions/download-artifact@v3
+        with:
+          name: dagent
+          path: artifacts
+      - name: agents - docker load
+        if: ${{ (needs.gather_changes.outputs.agents == 'true') || (github.ref_type == 'tag')  || (needs.gather_changes.outputs.release == 'true') }}
+        run: |
+          zstd -dc artifacts/dagent.zstd | docker load
+        # zstd -dc artifacts/crane.zstd | docker load
+      - name: crux - artifact download
+        if: ${{ (needs.gather_changes.outputs.crux == 'true') || (github.ref_type == 'tag')  || (needs.gather_changes.outputs.release == 'true') }}
+        uses: actions/download-artifact@v3
+        with:
+          name: crux
+          path: artifacts
+      - name: crux - docker load
+        if: ${{ (needs.gather_changes.outputs.crux == 'true') || (github.ref_type == 'tag')  || (needs.gather_changes.outputs.release == 'true') }}
+        run: zstd -dc artifacts/crux.zstd | docker load
+      - name: crux-ui - artifact download
+        if: ${{ (needs.gather_changes.outputs.cruxui == 'true') || (github.ref_type == 'tag')  || (needs.gather_changes.outputs.release == 'true') }}
+        uses: actions/download-artifact@v3
+        with:
+          name: crux-ui
+          path: artifacts
+      - name: crux-ui - docker load
+        if: ${{ (needs.gather_changes.outputs.cruxui == 'true') || (github.ref_type == 'tag')  || (needs.gather_changes.outputs.release == 'true') }}
+        run: zstd -dc artifacts/crux-ui.zstd | docker load
+      - name: kratos - artifact download
+        if: ${{ (needs.gather_changes.outputs.kratos == 'true') || (github.ref_type == 'tag')  || (needs.gather_changes.outputs.release == 'true') }}
+        uses: actions/download-artifact@v3
+        with:
+          name: kratos
+          path: artifacts
+      - name: kratos - docker load
+        if: ${{ (needs.gather_changes.outputs.kratos == 'true') || (github.ref_type == 'tag')  || (needs.gather_changes.outputs.release == 'true') }}
+        run: zstd -dc artifacts/kratos.zstd | docker load
+      - name: cli - artifact download
+        if: ${{ (needs.gather_changes.outputs.agents == 'true') || (github.ref_type == 'tag')  || (needs.gather_changes.outputs.release == 'true') }}
+        uses: actions/download-artifact@v3
+        with:
+          name: cli
+          path: artifacts
+      - name: cli - docker load
+        if: ${{ (needs.gather_changes.outputs.agents == 'true') || (github.ref_type == 'tag')  || (needs.gather_changes.outputs.release == 'true') }}
+        run: zstd -dc artifacts/cli.zstd | docker load
+      - name: Login to GHCR
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
+      - name: Setup using cli
+        run: |
+          export GITHUB_NETWORK=$(docker network ls -f name=github_network --format {{.Name}})
+          docker run -v /var/run/docker.sock:/var/run/docker.sock --network $GITHUB_NETWORK ${GITHUB_REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} --image-tag ${{ needs.gather_changes.outputs.tag }} --network $GITHUB_NETWORK --prefer-local-images --expect-container-env --debug -p dyo-e2e up
+      - name: Setup NPM caches
+        uses: actions/cache/restore@v3
+        with:
+          path: ${{ env.CRUX_UI_WORKING_DIRECTORY }}/.npm/**
+          key: ${{ runner.os }}-e2e_test-${{ hashFiles('web/crux-ui/package-lock.json') }}
+      - name: Run tests
+        working-directory: ${{ env.CRUX_UI_WORKING_DIRECTORY }}
+        env:
+          # DEBUG: pw:api
+          HUB_PROXY_URL: ${{ secrets.HUB_PROXY_URL }}
+          HUB_PROXY_TOKEN: ${{ secrets.HUB_PROXY_TOKEN }}
+          E2E_BASE_URL: "http://dyo-e2e_traefik:8000"
+          MAILSLURPER_URL: "http://dyo-e2e_mailslurper:4437"
+          CRUX_UI_URL: "http://dyo-e2e_traefik:8000"
+          KRATOS_URL: "http://dyo-e2e_kratos:4433"
+          KRATOS_ADMIN_URL: "http://dyo-e2e_kratos:4434"
+          CI: true
+        run: |
+          npm ci --include=dev --arch=x64 --cache .npm --prefer-offline --no-fund
+          npx playwright install chromium
+          npm run test:e2e
+      - name: Gather logs
+        working-directory: ${{ env.CRUX_UI_WORKING_DIRECTORY }}
+        if: always()
+        run: |
+          docker ps
+          mkdir logs
+          docker logs dyo-e2e_crux-ui > logs/e2e-crux-ui.log 2>&1
+          docker logs dyo-e2e_crux > logs/e2e-crux.log 2>&1
+          docker logs dyo-e2e_kratos > logs/e2e-kratos.log 2>&1
+          docker logs dyo-e2e_traefik > logs/e2e-traefik.log 2>&1
+          docker logs dagent > logs/e2e-dagent.log 2>&1
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: e2e-logs
+          path: ${{ env.CRUX_UI_WORKING_DIRECTORY }}/logs
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: e2e-screenshots
+          path: ${{ env.CRUX_UI_WORKING_DIRECTORY }}/e2e/screenshots/
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: e2e-trace
+          path: ${{ env.CRUX_UI_WORKING_DIRECTORY }}/e2e_results
+      - name: Teardown using cli
+        run: docker run -v /var/run/docker.sock:/var/run/docker.sock ${GITHUB_REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} --debug down
+      - name: Save NPM caches
+        uses: actions/cache/save@v3
+        with:
+          path: ${{ env.CRUX_UI_WORKING_DIRECTORY }}/.npm/**
+          key: ${{ runner.os }}-e2e_test-${{ hashFiles('web/crux-ui/package-lock.json') }}
   # separate build push action job is needed because of buildx limitations
   go_push:
     permissions:
@@ -526,9 +669,11 @@ jobs:
     defaults:
       run:
         working-directory: ${{ env.GOLANG_WORKING_DIRECTORY }}
-    needs: [gather_changes, go_build, crux_build, crux-ui_build, kratos_build]
+    needs: [gather_changes, e2e]
     if: |
       always() &&
+      (github.ref_name == 'develop' || github.ref_name == 'main' || github.ref_type == 'tag') &&
+      needs.e2e.result == 'success' &&
       needs.go_build.result == 'success' &&
       (needs.crux_build.result == 'success' || needs.crux_build.result == 'skipped') &&
       (needs.crux-ui_build.result == 'success' || needs.crux-ui_build.result == 'skipped') &&
@@ -582,15 +727,84 @@ jobs:
         env:
           VERSION: ${{ needs.gather_changes.outputs.version }}
           image_version: ${{ needs.gather_changes.outputs.tag }}
+  # go sign does not use docker push in order to keep multi-arch images intact
+  go_retag_and_sign:
+    permissions:
+      packages: write
+    runs-on: ubuntu-22.04
+    container:
+      image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:2
+    needs: [gather_changes, go_push]
+    if: |
+      always() &&
+      (github.ref_name == 'develop' || github.ref_name == 'main' || github.ref_type == 'tag') &&
+      needs.e2e.result == 'success' &&
+      needs.go_build.result == 'success' &&
+      (needs.crux_build.result == 'success' || needs.crux_build.result == 'skipped') &&
+      (needs.crux-ui_build.result == 'success' || needs.crux-ui_build.result == 'skipped') &&
+      (needs.kratos_build.result == 'success' || needs.kratos_build.result == 'skipped') &&
+      needs.conventional_commits.result == 'success' &&
+      needs.gather_changes.result == 'success' && needs.go_push.result == 'success'
+    environment: Workflow - Protected
+    steps:
+      - name: Login to GHCR
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_PAT }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          registry: docker.io
+          username: dyrectorio
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Write signing key to disk
+        run: echo "${{ secrets.COSIGN_PRIVATE_KEY }}" > cosign.key
+      - name: Add DockerHub tag
+        run: |
+          crane cp ${GITHUB_REGISTRY}/${CRANE_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} ${DOCKERHUB_REGISTRY}/crane:${{ needs.gather_changes.outputs.tag }}
+          crane cp ${GITHUB_REGISTRY}/${DAGENT_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} ${DOCKERHUB_REGISTRY}/dagent:${{ needs.gather_changes.outputs.tag }}
+          crane cp ${GITHUB_REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} ${DOCKERHUB_REGISTRY}/dyo:${{ needs.gather_changes.outputs.tag }}
+      - name: Docker tag extra
+        if: ${{ needs.gather_changes.outputs.extratag != '' }}
+        run: |
+          crane cp ${GITHUB_REGISTRY}/${CRANE_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} ${DOCKERHUB_REGISTRY}/crane:${{ needs.gather_changes.outputs.extratag }}
+          crane cp ${GITHUB_REGISTRY}/${DAGENT_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} ${DOCKERHUB_REGISTRY}/dagent:${{ needs.gather_changes.outputs.extratag }}
+          crane cp ${GITHUB_REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} ${DOCKERHUB_REGISTRY}/dyo:${{ needs.gather_changes.outputs.extratag }}
+          crane cp ${GITHUB_REGISTRY}/${CRANE_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} ${GITHUB_REGISTRY}/${CRANE_IMAGE_NAME}:${{ needs.gather_changes.outputs.extratag }}
+          crane cp ${GITHUB_REGISTRY}/${DAGENT_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} ${GITHUB_REGISTRY}/${DAGENT_IMAGE_NAME}:${{ needs.gather_changes.outputs.extratag }}
+          crane cp ${GITHUB_REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} ${GITHUB_REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.gather_changes.outputs.extratag }}
+      - name: Add minor version tag
+        if: github.ref_type == 'tag'
+        run: |
+          crane cp ${GITHUB_REGISTRY}/${CRANE_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} ${DOCKERHUB_REGISTRY}/crane:${{ needs.gather_changes.outputs.minorversion }}
+          crane cp ${GITHUB_REGISTRY}/${DAGENT_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} ${DOCKERHUB_REGISTRY}/dagent:${{ needs.gather_changes.outputs.minorversion }}
+          crane cp ${GITHUB_REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} ${DOCKERHUB_REGISTRY}/dyo:${{ needs.gather_changes.outputs.minorversion }}
+          crane cp ${GITHUB_REGISTRY}/${CRANE_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} ${GITHUB_REGISTRY}/${CRANE_IMAGE_NAME}:${{ needs.gather_changes.outputs.minorversion }}
+          crane cp ${GITHUB_REGISTRY}/${DAGENT_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} ${GITHUB_REGISTRY}/${DAGENT_IMAGE_NAME}:${{ needs.gather_changes.outputs.minorversion }}
+          crane cp ${GITHUB_REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} ${GITHUB_REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.gather_changes.outputs.minorversion }}
+        # - name: Sign container image
+        #   run: |
+        #     cosign sign --yes --key cosign.key $(docker inspect --format='{{index .RepoDigests 0}}' ${GITHUB_REGISTRY}/${CRANE_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} )
+        #     cosign sign --yes --key cosign.key $(docker inspect --format='{{index .RepoDigests 0}}' ${GITHUB_REGISTRY}/${DAGENT_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} )
+        #     cosign sign --yes --key cosign.key $(docker inspect --format='{{index .RepoDigests 0}}' ${GITHUB_REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} )
+        #     cosign sign --yes --key cosign.key $(docker inspect --format='{{index .RepoDigests 0}}' ${DOCKERHUB_REGISTRY}/crane:${{ needs.gather_changes.outputs.tag }} )
+        #     cosign sign --yes --key cosign.key $(docker inspect --format='{{index .RepoDigests 0}}' ${DOCKERHUB_REGISTRY}/dagent:${{ needs.gather_changes.outputs.tag }} )
+        #     cosign sign --yes --key cosign.key $(docker inspect --format='{{index .RepoDigests 0}}' ${DOCKERHUB_REGISTRY}/dyo:${{ needs.gather_changes.outputs.tag }} )
+        #   env:
+        #     COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
   crux_push:
     permissions:
       packages: write
     runs-on: ubuntu-22.04
     container:
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:2
-    needs: [gather_changes, go_build, crux_build, crux-ui_build, kratos_build]
+    needs: [crux_build, e2e, gather_changes]
     if: |
       always() &&
+      (github.ref_name == 'develop' || github.ref_name == 'main' || github.ref_type == 'tag') &&
+      needs.e2e.result == 'success' &&
       (needs.go_build.result == 'success' || needs.go_build.result == 'skipped') &&
       needs.crux_build.result == 'success' &&
       (needs.crux-ui_build.result == 'success' || needs.crux-ui_build.result == 'skipped') &&
@@ -649,9 +863,11 @@ jobs:
     runs-on: ubuntu-22.04
     container:
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:2
-    needs: [gather_changes, go_build, crux_build, crux-ui_build, kratos_build]
+    needs: [crux-ui_build, e2e, gather_changes]
     if: |
       always() &&
+      (github.ref_name == 'develop' || github.ref_name == 'main' || github.ref_type == 'tag') &&
+      needs.e2e.result == 'success' &&
       (needs.go_build.result == 'success' || needs.go_build.result == 'skipped') &&
       (needs.crux_build.result == 'success' || needs.crux_build.result == 'skipped') &&
       needs.crux-ui_build.result == 'success' &&
@@ -710,9 +926,11 @@ jobs:
     runs-on: ubuntu-22.04
     container:
       image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:2
-    needs: [gather_changes, go_build, crux_build, crux-ui_build, kratos_build]
+    needs: [kratos_build, e2e, gather_changes]
     if: |
       always() &&
+      (github.ref_name == 'develop' || github.ref_name == 'main' || github.ref_type == 'tag') &&
+      needs.e2e.result == 'success' &&
       (needs.go_build.result == 'success' || needs.go_build.result == 'skipped') &&
       (needs.crux_build.result == 'success' || needs.crux_build.result == 'skipped') &&
       (needs.crux-ui_build.result == 'success' || needs.crux-ui_build.result == 'skipped') &&
@@ -765,15 +983,3 @@ jobs:
           cosign sign --yes --key cosign.key $(docker inspect --format='{{index .RepoDigests 0}}' ${DOCKERHUB_REGISTRY}/kratos:${{ needs.gather_changes.outputs.tag }} )
         env:
           COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
-  deploy:
-    runs-on: ubuntu-22.04
-    needs: [go_push, crux_push, crux-ui_push, kratos_push]
-    environment: Workflow - Protected
-    steps:
-      - name: Execute dedicated Sunilium instance webhook
-        run: |
-          if curl -s -X POST --fail --head 'Authorization: Bearer ${{secrets.SUN_DYO_WEBHOOK_TOKEN}}' ${{secrets.SUN_DYO_WEBHOOK_API_URL}}; then
-            echo "Deployment successful."
-          else
-            exit 1
-          fi
