--- a/.github/workflows/product_builder.yaml
+++ b/.github/workflows/product_builder.yaml
@@ -193,7 +193,7 @@ jobs:
           export KUBECONFIG="$(pwd)/k3d-auth.yaml" && \
           make test-integration
       - name: Upload integration test results
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: golang-integration-coverage
           path: ${{ env.GOLANG_WORKING_DIRECTORY }}/**.cov
@@ -222,7 +222,7 @@ jobs:
       - name: Run unit tests with coverage
         run: make test-unit-with-coverage
       - name: Upload unit test results
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: golang-unit-coverage
           path: ${{ env.GOLANG_WORKING_DIRECTORY }}/**.cov
@@ -239,19 +239,19 @@ jobs:
       - name: Install coverage merger
         run: go install go.shabbyrobe.org/gocovmerge/cmd/gocovmerge@latest
       - name: Download integration test results from artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: golang-integration-coverage
       - name: Download unit test results from artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: golang-unit-coverage
       - name: Merge coverage
         run: gocovmerge ./builder.cov ./cli.cov ./crane.cov ./dagent.cov ./internal.cov ./unit.cov  > ./merged.cov
       - name: Upload coverage reports to Codecov with GitHub Action
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v5
         with:
-          files: ./merged.cov
+          file: ./merged.cov
           name: golang-coverage
   go_build:
     runs-on: ubuntu-22.04
@@ -302,17 +302,17 @@ jobs:
           docker save ${GITHUB_REGISTRY}/${DAGENT_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} | zstd > dagent.zstd
           docker save ${GITHUB_REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} | zstd > cli.zstd
       - name: artifact upload
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: crane
           path: ${{ env.GOLANG_WORKING_DIRECTORY }}/crane.zstd
       - name: artifact upload
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: dagent
           path: ${{ env.GOLANG_WORKING_DIRECTORY }}/dagent.zstd
       - name: artifact upload
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: cli
           path: ${{ env.GOLANG_WORKING_DIRECTORY }}/cli.zstd
@@ -410,7 +410,7 @@ jobs:
       - name: Docker save
         run: docker save ${GITHUB_REGISTRY}/${CRUX_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} | zstd > crux.zstd
       - name: artifact upload
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: crux
           path: ${{ env.CRUX_WORKING_DIRECTORY }}/crux.zstd
@@ -490,7 +490,7 @@ jobs:
       - name: Docker save
         run: docker save ${GITHUB_REGISTRY}/${CRUX_UI_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} | zstd > crux-ui.zstd
       - name: artifact upload
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: crux-ui
           path: ${{ env.CRUX_UI_WORKING_DIRECTORY }}/crux-ui.zstd
@@ -512,7 +512,7 @@ jobs:
       - name: Docker save
         run: docker save ${GITHUB_REGISTRY}/${KRATOS_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} | zstd > kratos.zstd
       - name: artifact upload
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: kratos
           path: ${{ env.KRATOS_WORKING_DIRECTORY }}/kratos.zstd
@@ -544,13 +544,13 @@ jobs:
         uses: actions/checkout@v3
       # - name: crane - artifact download
       #   if: needs.gather_changes.outputs.agents == 'true'
-      #   uses: actions/download-artifact@v3
+      #   uses: actions/download-artifact@v4
       #   with:
       #     name: crane
       #     path: artifacts
       - name: dagent - artifact download
         if: ${{ (needs.gather_changes.outputs.agents == 'true') || (github.ref_type == 'tag')  || (needs.gather_changes.outputs.release == 'true') }}
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: dagent
           path: artifacts
@@ -561,7 +561,7 @@ jobs:
         # zstd -dc artifacts/crane.zstd | docker load
       - name: crux - artifact download
         if: ${{ (needs.gather_changes.outputs.crux == 'true') || (github.ref_type == 'tag')  || (needs.gather_changes.outputs.release == 'true') }}
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: crux
           path: artifacts
@@ -570,7 +570,7 @@ jobs:
         run: zstd -dc artifacts/crux.zstd | docker load
       - name: crux-ui - artifact download
         if: ${{ (needs.gather_changes.outputs.cruxui == 'true') || (github.ref_type == 'tag')  || (needs.gather_changes.outputs.release == 'true') }}
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: crux-ui
           path: artifacts
@@ -579,7 +579,7 @@ jobs:
         run: zstd -dc artifacts/crux-ui.zstd | docker load
       - name: kratos - artifact download
         if: ${{ (needs.gather_changes.outputs.kratos == 'true') || (github.ref_type == 'tag')  || (needs.gather_changes.outputs.release == 'true') }}
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kratos
           path: artifacts
@@ -588,7 +588,7 @@ jobs:
         run: zstd -dc artifacts/kratos.zstd | docker load
       - name: cli - artifact download
         if: ${{ (needs.gather_changes.outputs.agents == 'true') || (github.ref_type == 'tag')  || (needs.gather_changes.outputs.release == 'true') }}
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: cli
           path: artifacts
@@ -645,17 +645,17 @@ jobs:
             docker logs $cont > logs/$cont.log 2>&1
             docker inspect $cont > logs/$cont.inspect 2>&1
           done
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: e2e-logs
           path: ${{ env.CRUX_UI_WORKING_DIRECTORY }}/logs
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         if: always()
         with:
           name: e2e-screenshots
           path: ${{ env.CRUX_UI_WORKING_DIRECTORY }}/e2e/screenshots/
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: e2e-trace
@@ -822,7 +822,7 @@ jobs:
     environment: Workflow - Protected
     steps:
       - name: artifact download
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: crux
           path: artifacts
@@ -885,7 +885,7 @@ jobs:
     environment: Workflow - Protected
     steps:
       - name: artifact download
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: crux-ui
           path: artifacts
@@ -948,7 +948,7 @@ jobs:
     environment: Workflow - Protected
     steps:
       - name: artifact download
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kratos
           path: artifacts
