--- a/.github/workflows/builder_image_nodejs.yaml
+++ b/.github/workflows/builder_image_nodejs.yaml
@@ -2,9 +2,17 @@ name: builder_image_nodejs
 on:
   push:
     branches: [develop]
-    paths: [images/builder-nodejs/**, .github/workflows/image-builder-nodejs.yml]
+    paths:
+      [
+        distrib/images/builder-nodejs/**,
+        .github/workflows/image-builder-nodejs.yml,
+      ]
   pull_request:
-    paths: [images/builder-nodejs/**, .github/workflows/image-builder-nodejs.yml]
+    paths:
+      [
+        distrib/images/builder-nodejs/**,
+        .github/workflows/image-builder-nodejs.yml,
+      ]
 permissions:
   contents: read
   pull-requests: read
@@ -25,7 +33,7 @@ jobs:
           sudo apt install zstd golang docker.io containerd runc
       - name: Docker build
         run: |
-          docker build -f ./images/builder-nodejs/Dockerfile -t ${GITHUB_REGISTRY}/${BUILDER_IMAGE_NAME}:${VERSION} .
+          docker build -f ./distrib/images/builder-nodejs/Dockerfile -t ${GITHUB_REGISTRY}/${BUILDER_IMAGE_NAME}:${VERSION} .
       - name: Docker export image
         run: |
           docker save ${GITHUB_REGISTRY}/${BUILDER_IMAGE_NAME}:${VERSION} | gzip -f > builder.zstd
