migrate github & add review adjustments

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # This composition of compose files reflects the old one
-COMPOSE_FILE=docker-compose.yaml:distrib/compose/docker-compose.traefik.yaml:distrib/compose/docker-compose.traefik-labels.yaml:distrib/compose/docker-compose.mail.yaml
+COMPOSE_FILE=docker-compose.yaml:distrib/compose/docker-compose.traefik.yaml:distrib/compose/docker-compose.traefik-labels.yaml:distrib/compose/docker-compose.mail-test.yaml
 # # Docker settings
 
 # Traefik requires this file to be able to route the requests to the containers
