--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,8 @@
     },
     "yaml.schemas": {
         "https://json.schemastore.org/golangci-lint.json": "file:///home/nandor/projects/dyrectorio/dyo-pub/.golangci.yml"
+    },
+    "[yaml]": {
+        "editor.defaultFormatter": "bluebrown.yamlfmt"
     }
 }
