--- a/.github/workflows/builder_image_signer.yaml
+++ b/.github/workflows/builder_image_signer.yaml
@@ -2,9 +2,9 @@ name: builder_image_signer
 on:
   push:
     branches: [develop]
-    paths: [distrib/images/signer/**, .github/workflows/image-signer.yml]
+    paths: [distribution/images/signer/**, .github/workflows/image-signer.yml]
   pull_request:
-    paths: [distrib/images/signer/**, .github/workflows/image-signer.yml]
+    paths: [distribution/images/signer/**, .github/workflows/image-signer.yml]
 permissions:
   contents: read
   pull-requests: read
@@ -25,7 +25,7 @@ jobs:
           sudo apt install zstd golang docker.io containerd runc
       - name: Docker build
         run: |
-          docker build -f ./distrib/images/signer/Dockerfile -t ${GITHUB_REGISTRY}/${BUILDER_IMAGE_NAME}:${VERSION} .
+          docker build -f ./distribution/images/signer/Dockerfile -t ${GITHUB_REGISTRY}/${BUILDER_IMAGE_NAME}:${VERSION} .
       - name: Docker export image
         run: |
           docker save ${GITHUB_REGISTRY}/${BUILDER_IMAGE_NAME}:${VERSION} | gzip -f > builder.zstd
