fix(ci): remove unused workflows and rename existings for better usage

--- a/.github/config/source_labeler.yml
+++ b/.github/config/source_labeler.yml
@@ -1,3 +1,5 @@
+# Automatically label new pull requests based on the paths of files being changed or the branch name.
+
 source:web: [web/**]
 source:documentation: [docs/**]
 source:agent:
