feat: add convenience script & go toolchain upgrade (#1040)

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
-## Docker settings
+# This composition of compose files reflects the old one
+COMPOSE_FILE=docker-compose.yaml:distribution/compose/docker-compose.traefik.yaml:distribution/compose/docker-compose.traefik-labels.yaml:distribution/compose/docker-compose.mail-test.yaml
+# # Docker settings
 
 # Traefik requires this file to be able to route the requests to the containers
 DOCKER_SOCKET=/var/run/docker.sock
 
-## General
+# # General
 
 # Tag for images. It's stable by default
 DYO_VERSION=stable
@@ -20,7 +22,7 @@ ACME_EMAIL=user@example.com
 # These are the two values this key can have
 NODE_ENV=production
 
-## Crux service settings
+# # Crux service settings
 
 # You can specify how thorough logging will be
 # Options: verbose, debug, info, warning, error
@@ -33,20 +35,20 @@ LOG_LEVEL=debug
 # Example: docker run --rm ghcr.io/dyrector-io/dyrectorio/cli/dyo:latest generate crux encryption-key
 ENCRYPTION_SECRET_KEY=Random_Generate_Key
 
-## Database passwords
+# # Database passwords
 
 # This value is the password to crux's database
 CRUX_POSTGRES_PASSWORD=Random_Generated_String
 # This value is the password to Kratos' database
 KRATOS_POSTGRES_PASSWORD=Random_Generated_String
 
-## External URL of the site https://example.com(:port if not 443)
+# # External URL of the site https://example.com(:port if not 443)
 
 # This setting is to define where your
 # self-managed dyrector.io will be available
-EXTERNAL_URL=https://example.com
+EXTERNAL_PROTO=https
 
-## Cookie/JWT secrets
+# # Cookie/JWT secrets
 
 # Secret to sign JWTs.
 CRUX_SECRET=Random_Generated_String
@@ -55,7 +57,7 @@ CRUX_SECRET=Random_Generated_String
 # https://www.ory.sh/docs/kratos/reference/configuration
 KRATOS_SECRET=Random_Generated_String
 
-## Mailserver settings
+# # Mailserver settings
 
 # The connection string for the mail server
 # The protocol can be SMTP or SMTPS
@@ -68,7 +70,7 @@ FROM_EMAIL=from@example.com
 # password resets and others
 FROM_NAME=dyrector.io
 
-## ReCAPTCHA secrets
+# # ReCAPTCHA secrets
 
 # In case you don't want to use ReCAPTCHA set DISABLE_RECAPTCHA to true
 # Highly recommended to keep the default value, which is `false`
