--- a/distribution/images/builder-golang/Dockerfile
+++ b/distribution/images/builder-golang/Dockerfile
@@ -1,19 +1,19 @@
 # note: update this together with protobuf image
-FROM docker.io/library/golang:1.22-alpine3.19
+FROM docker.io/library/golang:1.23-alpine3.20
 
 ENV GOLANGCI_LINT_CACHE $GOPATH/cache
 ENV GOCACHE $GOPATH/cache
 
 SHELL ["/bin/ash","-c"]
 WORKDIR /usr/work
-LABEL org.opencontainers.image.source="https://github.com/dyrector-io/dyrectorio/tree/develop/images/alpine-proto"
+LABEL org.opencontainers.image.source="https://github.com/dyrector-io/dyrectorio/tree/develop/distribution/images/alpine-proto"
 
 RUN mkdir -p $GOPATH/src && \
     mkdir -p $GOPATH/bin && \
     mkdir -p $GOPATH/cache && \
     mkdir -p $GOPATH/pkg
 
-RUN apk add alpine-sdk docker git zstd bash
+RUN apk add alpine-sdk docker git zstd bash curl
 
 # Need these for integration tests
 RUN curl -s https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash
