--- a/.github/workflows/builder_image_nodejs.yaml
+++ b/.github/workflows/builder_image_nodejs.yaml
@@ -2,9 +2,9 @@ name: builder_image_nodejs
 on:
   push:
     branches: [develop]
-    paths: [images/builder-nodejs/**, .github/workflows/image-builder-nodejs.yml]
+    paths: [distribution/images/builder-nodejs/**, .github/workflows/image-builder-nodejs.yml]
   pull_request:
-    paths: [images/builder-nodejs/**, .github/workflows/image-builder-nodejs.yml]
+    paths: [distribution/images/builder-nodejs/**, .github/workflows/image-builder-nodejs.yml]
 permissions:
   contents: read
   pull-requests: read
@@ -18,19 +18,19 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Add requirements and build the image
         run: |
           sudo apt update
           sudo apt install zstd golang docker.io containerd runc
       - name: Docker build
         run: |
-          docker build -f ./images/builder-nodejs/Dockerfile -t ${GITHUB_REGISTRY}/${BUILDER_IMAGE_NAME}:${VERSION} .
+          docker build -f ./distribution/images/builder-nodejs/Dockerfile -t ${GITHUB_REGISTRY}/${BUILDER_IMAGE_NAME}:${VERSION} .
       - name: Docker export image
         run: |
           docker save ${GITHUB_REGISTRY}/${BUILDER_IMAGE_NAME}:${VERSION} | gzip -f > builder.zstd
       - name: Artifact upload
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: builder
           path: ./builder.zstd
@@ -41,7 +41,7 @@ jobs:
     environment: Workflow - Protected
     steps:
       - name: Artifact download
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: builder
           path: artifacts
