--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,11 +12,12 @@ services:
       - KRATOS_ADMIN_URL=http://kratos:4434
       - KRATOS_URL=http://kratos:4433
       - CRUX_UI_URL=${EXTERNAL_PROTO}://${DOMAIN}${EXTERNAL_PORT}
-      - CRUX_AGENT_ADDRESS=${DOMAIN}${EXTERNAL_PORT}
+      - CRUX_AGENT_ADDRESS=${CRUX_AGENT_HOST}${EXTERNAL_PORT}
       - JWT_SECRET=${CRUX_SECRET}
       - FROM_EMAIL=${FROM_EMAIL}
       - FROM_NAME=${FROM_NAME}
       - SMTP_URI=${SMTP_URI}
+      - NODE_ENV=${NODE_ENV}
       - DISABLE_RECAPTCHA=${DISABLE_RECAPTCHA:-true}
       - RECAPTCHA_SECRET_KEY=${RECAPTCHA_SECRET_KEY}
       - RECAPTCHA_SITE_KEY=${RECAPTCHA_SITE_KEY}
