feat(web): merge postgress instances (#1049)

--- a/.env.example
+++ b/.env.example
@@ -41,6 +41,8 @@ ENCRYPTION_SECRET_KEY=Random_Generate_Key
 CRUX_POSTGRES_PASSWORD=Random_Generated_String
 # This value is the password to Kratos' database
 KRATOS_POSTGRES_PASSWORD=Random_Generated_String
+# This value is the password to root user
+POSTGRES_ROOT_PASSWORD=Random_Generated_String
 
 # # External URL of the site https://example.com(:port if not 443)
 
