feat(ci): change custom golangci-lint to github action one

--- a/.github/workflows/product_builder.yaml
+++ b/.github/workflows/product_builder.yaml
@@ -127,6 +127,7 @@ jobs:
         with:
           version: v2.0
           working-directory: ${{ env.GOLANG_WORKING_DIRECTORY }}
+          args: --config=../.golangci.yml
   go_security:
     runs-on: ubuntu-22.04
     needs: gather_changes
